--- a/views/ourservices.ejs
+++ b/views/ourservices.ejs
@@ -23,7 +23,7 @@
                 confident in comparing our rates with anyone else’s.
                 </p>
             </div>
-            <div class="col-xs-4">
+            <div class="col-xs-4 how">
                 <h1 class="how-it-works">how it works</h1>
             </div>
         </div>
