--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,9 @@
     <link rel="stylesheet" href="header.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -39,14 +42,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-4 navbar-left">
-                    <button class="navbar-btn btn-lg"><a href="/ourband">our band</a></button>
+                    <button class="navbar-btn btn-lg our-band"><a href="/ourband">our band</a></button>
                     <button class="navbar-btn btn-lg"><a href="/realourservices">our services</a></button>
                 </div>
-                <div class="col-xs-4 center-block text-center">
+                <div class="col-xs-4 text-center logo">
                     <a href="/"><img class="logo-full" src="/assets/GreenRoom_logo 1.png"></img></a>
                 </div>
-                <div class="col-xs-4 navbar-right center-block text-center">
-                    <button class="navbar-btn btn-lg"><a href="/getintouch">get in touch</a></button>
+                <div class="col-xs-4 navbar-right text-center">
+                    <button class="navbar-btn btn-lg get-in-touch"><a href="/getintouch">get in touch</a></button>
                 </div>
         </div>
     </nav>
