--- a/public/getintouch.css
+++ b/public/getintouch.css
@@ -28,6 +28,10 @@
 }
 
 @media screen and (min-width: 1025px) {
+    html {
+        overflow-x: hidden;
+    }
+
     .touch {
         width: 75%;
         margin-left: 12.5%;
