--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,15 +9,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
 <div class="container-fluid everything">
     <img class="background-guitar" src="/assets/backgroundguitaragain.png"></img>
-    <%- include('partials/header') %>
-
     <div class="container-fluid">
+    <%- include('partials/header') %>
         <div class="row">
             <div class="col-xs-2"></div>
             <div class="col-xs-8 buttons">
@@ -37,8 +33,10 @@
             <div class="col-xs-2"></div>
         </div>
         <div class="row text-center bottom-text">
+            <div class="col-xs-12">
             <h1>Planning tours is complicated.</h1>
             <h1>We make it easy.</h1>
+            </div>
         </div>
     </div>
 
