--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="footer.css">
 </head>
 <div class="container-fluid footer">
-    <div class="row text-center">
+    <div class="row text-center all">
         <button class="btn btn-lg dropmail-button"><a class="dropmail" href="mailto: jk@greenroom.travel" target="_blank">Drop us a line</a></button>
     </div>
     <div class="row">
