--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,7 +40,7 @@
 
     <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row all">
                 <div class="col-xs-4 navbar-left">
                     <button class="navbar-btn btn-lg our-band"><a href="/ourband">our band</a></button>
                     <button class="navbar-btn btn-lg"><a href="/realourservices">our services</a></button>
