--- a/public/footer.css
+++ b/public/footer.css
@@ -57,6 +57,14 @@ ul {
     .footer img {
         width: 2em;
     }
+
+    .dropmail-button {
+        background: #B6CC38;
+        width: 45%;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        padding: 1em;
+    }
 }
 
 @media screen and (min-width: 1024px)  {
