--- a/views/ourband.ejs
+++ b/views/ourband.ejs
@@ -43,7 +43,7 @@
                 </span>
             </span>
             <span class="whitney card">
-                <h2>Whitney Cover<img src="assets/coverdot.png"></h2>
+                <h2>Whitney Cover<img src="assets/whitneydot.png"></h2>
                 <p class="bottom-margin-p">user experience</p>
                 <span class="information-right">
                     <span>Whitney Cover, User Experience</span>
