--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,6 +13,13 @@
 <div class="container-fluid everything">
     <img class="background-guitar" src="/assets/backgroundguitaragain.png"></img>
     <div class="container-fluid">
+<script type="text/javascript" src="//www.freeprivacypolicy.com/public/cookie-consent/4.1.0/cookie-consent.js" charset="UTF-8"></script>
+<script type="text/javascript" charset="UTF-8">
+document.addEventListener('DOMContentLoaded', function () {
+cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","palette":"light","language":"en","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"page_refresh_confirmation_buttons":false,"website_name":"Green Room Travel","website_privacy_policy_url":"https://greenroom.travel/privacy"});
+});
+</script>
+
     <%- include('partials/header') %>
         <div class="row">
             <div class="col-xs-2"></div>
