--- a/views/ourband.ejs
+++ b/views/ourband.ejs
@@ -16,7 +16,7 @@
     <div class="container-fluid">
     <div class="row text-center">
         <div class="col-xs-12">
-            <h1 class="">our band</h1>
+            <h1>our band</h1>
             <span class="name-kempa card">
                 <h2><img src="assets/kempadot2.png">Jeff Kempa</h2>
                 <p class="bottom-margin-p">founder, IATA certified travel agent</p>
