--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,6 +26,7 @@
                         <li><a class="dropdown-item" href="/getintouch">get in touch</a></li>
                         <li><a class="dropdown-item" href="/ourservices">for bands</a></li>
                         <li><a class="dropdown-item" href="/forfans">for fans</a></li>
+                        <li><a class="dropdown-item" href="tour">clients on tour</a></li>
                         <li><a class="dropdown-item" href="/">home</a></li>
                         </ul>
                     </div>
@@ -48,9 +49,11 @@
                 <div class="col-xs-4 text-center logo">
                     <a href="/"><img class="logo-full" src="/assets/GreenRoom_logo 1.png"></img></a>
                 </div>
-                <div class="col-xs-4 navbar-right text-center">
+                <div class="col-xs-4 navbar-end text-center">
                     <button class="navbar-btn btn-lg get-in-touch"><a href="/getintouch">get in touch</a></button>
+                    <button class="navbar-btn btn-lg clients"><a href="/tour">clients on tour</a></button>
                 </div>
+            </div>
         </div>
     </nav>
 </header>
