--- a/public/tour.css
+++ b/public/tour.css
@@ -1,7 +1,7 @@
 .everything {
     font-family: 'Kumbh Sans', Verdana, Geneva, Tahoma, sans-serif;
     background: linear-gradient(20deg, #464141 60%, #312D2D 60%);
-    color: white;
+    color: #D9D9D9;
 }
 
 h1 {
@@ -19,18 +19,26 @@ button {
 
 button a {
     text-align: center;
-    color: black;
+    color: #B6CC38;
+}
+
+button a:hover {
+    color: #D9D9D9;
 }
 
 .band {
-    color: black;
+    color: #B6CC38;
     margin-bottom: 1em;
-    background: #D9D9D9;
+    background: black;
     font-size: 2em;
 }
 
 td > a {
     color: #B6CC38;
+}
+
+td > a:hover {
+    color: #D9D9D9;
 }
 
 .table, .tables {
