--- a/public/tour.css
+++ b/public/tour.css
@@ -62,6 +62,10 @@ td > a:hover {
         margin-bottom: 1em;
     }
 
+    .john {
+        margin-top: 1em;
+    }
+
     .band {
         font-size: 1.8em;
     }
