--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -14,14 +14,14 @@
     <div class="container-fluid text-center">
             <h1>clients on tour</h1>
             <div class="tables table-responsive">
-                <button class="band"><a href="https://www.speedyortiz.com/" target="_blank">Speedy Ortiz</a></button>
+                <button class="band speedy"><a href="https://www.speedyortiz.com/" target="_blank">Speedy Ortiz</a></button>
                 <table class="table table-responsive speedy-table">
                     <thead>
                         <tr>
-                            <td scope="col" class="col-sm-3">Date</td>
-                            <td scope="col" class="col-sm-3">City</td>
-                            <td scope="col" class="col-sm-3">Venue</td>
-                            <td scope="col" class="col-sm-3">Tickets</td>
+                            <td scope="col" class="col-md-3">Date</td>
+                            <td scope="col" class="col-md-3">City</td>
+                            <td scope="col" class="col-md-3">Venue</td>
+                            <td scope="col" class="col-md-3">Tickets</td>
                         </tr>
                     </thead>
                 <tbody>
@@ -184,135 +184,76 @@
                 </tbody>
                 </table>
 
-                <button class="band"><a href="https://www.johntheband.co.uk/" target="_blank">John</a></button>
+                <button class="band john"><a href="https://www.johntheband.co.uk/" target="_blank">John</a></button>
                 <table class="table table-responsive john-table">
                     <thead>
                         <tr>
-                            <td scope="col" class="col-sm-3">Date</td>
-                            <td scope="col" class="col-sm-3">City</td>
-                            <td scope="col" class="col-sm-3">Venue</td>
-                            <td scope="col" class="col-sm-3">Tickets</td>
+                            <td scope="col" class="col-md-3">Date</td>
+                            <td scope="col" class="col-md-3">City</td>
+                            <td scope="col" class="col-md-3">Venue</td>
+                            <td scope="col" class="col-md-3">Tickets</td>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-
                             <td scope="col" class="col-sm-3">Feb 9, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Bournemouth, UK</td>
-                            
                             <td scope="col" class="col-sm-3">Bear Cave</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://www.seetickets.com/event/john/bear-cave/2750965?aff=id1bandsintown" target="_blank">Link</a></td>
-                            
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Feb 10, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Milton Keynes, UK</td>
-                            
                             <td scope="col" class="col-sm-3">The Craufurd Arms</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://www.seetickets.com/event/john/the-craufurd-arms/2751303?aff=id1bandsintown" target="_blank">Link</a></td>
-                            
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Feb 16, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Leeds, UK</td>
-                            
                             <td scope="col" class="col-sm-3">Brudenell Social Club</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://www.seetickets.com/event/john/brudenell-social-club/2750922?aff=id1bandsintown" target="_blank">Link</a></td>
-                            
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Feb 17, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Stowmarket, UK</td>
-                            
                             <td scope="col" class="col-sm-3">John Peel Centre for Creative Arts</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://johnpeelcentre.savoysystems.co.uk/JohnPeelCentre.dll/TSelectItems.waSelectItemsPrompt.TcsWebMenuItem_443.TcsWebTab_444.TcsPerformance_143486.TcsSection_756"target="_blank">Link</a></td>
-                            
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Feb 23, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Brighton, UK</td>
-                            
                             <td scope="col" class="col-sm-3">Concorde 2</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://www.ticketweb.uk/event/john-concorde-2-tickets/13520738?irgwc=1&utm_source=219208-Bandsintown&utm_medium=affiliate&utm_campaign=219208&clickId=SSRwlYTNIxyPUTXQyJQWHwKVUkHzp1RFiRLnXg0"target="_blank">Link</a></td>
-                            
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Feb 24, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Nottingham, UK</td>
-                            
                             <td scope="col" class="col-sm-3">Bodega</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://www.ticketweb.uk/event/john-the-bodega-tickets/13520638?REFERRAL_ID=tmfeed&irgwc=1&utm_source=219208-Bandsintown&utm_medium=affiliate&utm_campaign=219208&clickId=SSRwlYTNIxyPUTXQyJQWHwKVUkHzp1Q9iRLnXg0"target="_blank">Link</a></td>
-                            
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Feb 29, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">London, UK</td>
-                            
                             <td scope="col" class="col-sm-3">Scala</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://www.ticketweb.uk/event/john-scala-tickets/13520748?REFERRAL_ID=tmfeed&irgwc=1&utm_source=219208-Bandsintown&utm_medium=affiliate&utm_campaign=219208&clickId=SSRwlYTNIxyPUTXQyJQWHwKVUkHzp1SZiRLnXg0"target="_blank">Link</a></td>
-                            
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Mar 1, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Reading, UK</td>
-                            
                             <td scope="col" class="col-sm-3">The Face Bar</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://www.seetickets.com/event/john/the-face-bar/2751091?aff=id1bandsintown" target="_blank">Link</a></td>
-                            
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Mar 8, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Hull, UK</td>
-                            
                             <td scope="col" class="col-sm-3">The New Adelphi Club</td>
-                            
-                            <td scope="col" class="col-sm-3"><a href="https://www.theadelphi.com/events/john-support-2/target="_blank">Link</a></td>
-                            
+                            <td scope="col" class="col-sm-3"><a href="https://www.theadelphi.com/events/john-support-2/" target="_blank">Link</a></td>
                             </tr>
-                            
                             <tr>
-                            
                             <td scope="col" class="col-sm-3">Mar 9, 2024</td>
-                            
                             <td scope="col" class="col-sm-3">Newcastle Upon Tyne, UK</td>
-                            
                             <td scope="col" class="col-sm-3">Cluny 2</td>
-                            
                             <td scope="col" class="col-sm-3"><a href="https://www.ticketweb.uk/event/john-cluny-2-tickets/13256763?REFERRAL_ID=tmfeed&irgwc=1&utm_source=219208-Bandsintown&utm_medium=affiliate&utm_campaign=219208&clickId=SSRwlYTNIxyPUTXQyJQWHwKVUkHzpyRFiRLnXg0"target="_blank">Link</a></td>
-                            
                             </tr>
                     </tbody>
                 </table>
