--- a/public/tour.css
+++ b/public/tour.css
@@ -50,7 +50,23 @@ td > a:hover {
 }
 
 .footer {
-    margin-top: 2em;
+    margin-top: 15em;
+}
+
+.john-table {
+    display: none;
+}
+
+.john:hover .john-table {
+    display: block;
+}
+
+.speedy-table {
+    display: none;
+}
+
+.speedy:hover .speedy-table {
+    display: block;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1024px)  { 
