--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -14,7 +14,8 @@
     <div class="container-fluid text-center">
             <h1>clients on tour</h1>
             <div class="tables table-responsive">
-                <button class="band speedy"><a href="https://www.speedyortiz.com/" target="_blank">Speedy Ortiz</a></button>
+                <div class="speedy">
+                <button class="band speedy">Speedy Ortiz</button>
                 <table class="table table-responsive speedy-table">
                     <thead>
                         <tr>
@@ -183,8 +184,10 @@
                         </tr>
                 </tbody>
                 </table>
+            </div>
 
-                <button class="band john"><a href="https://www.johntheband.co.uk/" target="_blank">John</a></button>
+                <div class="john">
+                <button class="band john">John</button>
                 <table class="table table-responsive john-table">
                     <thead>
                         <tr>
@@ -257,6 +260,7 @@
                             </tr>
                     </tbody>
                 </table>
+            </div>
         </div>
     </div>
     <%- include('partials/footer') %>
