--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -15,7 +15,7 @@
             <h1>clients on tour</h1>
             <div class="tables table-responsive">
                 <div class="speedy">
-                <button class="band speedy">Speedy Ortiz</button>
+                <button class="band speedy-button">Speedy Ortiz</button>
                 <table class="table table-responsive speedy-table">
                     <thead>
                         <tr>
@@ -265,4 +265,5 @@
     </div>
     <%- include('partials/footer') %>
 </div>
+<script type="text/javascript" src="js/buttonClick.js"></script>
 </html>
