adding chastity belt

--- a/public/tour.css
+++ b/public/tour.css
@@ -70,6 +70,10 @@ td > a:hover {
     margin-top: 0;
 }
 
+.chastity-table {
+    margin-top: 0;
+}
+
 @media screen and (min-width: 0px) and (max-width: 1024px)  { 
     h1 {
         display: none;
@@ -100,6 +104,10 @@ td > a:hover {
     }
     
     .cloud-table {
+        margin-top: 0;
+    }
+
+    .chastity-table {
         margin-top: 0;
     }
 }
