--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -27,30 +27,6 @@
                             </thead>
                             <tbody>
                         <tr>
-                            <td scope="col" class="col-sm-3">Mar 6, 2024</td>
-                            <td scope="col" class="col-sm-3">Copenhagen, DK</td>
-                            <td scope="col" class="col-sm-3">Musikcafeen</td>
-                            <td scope="col" class="col-sm-3"><a href="https://billetto.dk/e/speedy-ortiz-us-huset-billetter-868532" target="_blank">Link</a></td>
-                        </tr>
-                        <tr>
-                            <td scope="col" class="col-sm-3">Mar 7, 2024</td>
-                            <td scope="col" class="col-sm-3">Berlin, DE</td>
-                            <td scope="col" class="col-sm-3">Urban Spree</td>
-                            <td scope="col" class="col-sm-3"><a href="https://www.eventim.de/noapp/event/17575163/?affiliate=BNO&affiliate=BNO&utm_source=awin&utm_medium=affiliate&utm_campaign=97249&awc=11388_1706102331_cecf1f161709bf028bb84a0dcb6c3841" target="_blank">Link</a></td>
-                        </tr>
-                        <tr>
-                            <td scope="col" class="col-sm-3">Mar 9, 2024</td>
-                            <td scope="col" class="col-sm-3">Warsaw, PL</td>
-                            <td scope="col" class="col-sm-3">VooDoo Club</td>
-                            <td scope="col" class="col-sm-3"><a href="https://www.ticketmaster.pl/event/speedy-ortiz-rabbit-rabbit-tour-tour-2024-bilety/32099?clickId=0%3ApUwhTO7xyPTleRf1R0r2PGUkHzAD2xw1R23Y0&irgwc=1&utm_source=Bandsintown&utm_medium=affiliate&utm_campaign=219208&utm_content=1212555_8185" target="_blank">Link</a></td>
-                        </tr>
-                        <tr>
-                            <td scope="col" class="col-sm-3">Mar 10, 2024</td>
-                            <td scope="col" class="col-sm-3">Prague, CZ</td>
-                            <td scope="col" class="col-sm-3">Cafe V Lese</td>
-                            <td scope="col" class="col-sm-3"><a href="https://goout.net/cs/speedy-ortiz/szknujw/" target="_blank">Link</a></td>
-                        </tr>
-                        <tr>
                             <td scope="col" class="col-sm-3">Mar 12, 2024</td>
                             <td scope="col" class="col-sm-3">Budapest, HU</td>
                             <td scope="col" class="col-sm-3">Durer Kert</td>
@@ -98,29 +74,8 @@
 
                     <div class="john">
                         <button class="band john">John</button>
-                        <table class="table table-responsive john-table" style="display: none;">
-                            <thead>
-                                <tr>
-                                    <td scope="col" class="col-md-3">Date</td>
-                                    <td scope="col" class="col-md-3">City</td>
-                                    <td scope="col" class="col-md-3">Venue</td>
-                                    <td scope="col" class="col-md-3">Tickets</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                            <td scope="col" class="col-sm-3">Mar 8, 2024</td>
-                            <td scope="col" class="col-sm-3">Hull, UK</td>
-                            <td scope="col" class="col-sm-3">The New Adelphi Club</td>
-                            <td scope="col" class="col-sm-3"><a href="https://www.theadelphi.com/events/john-support-2/" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                            <td scope="col" class="col-sm-3">Mar 9, 2024</td>
-                            <td scope="col" class="col-sm-3">Newcastle Upon Tyne, UK</td>
-                            <td scope="col" class="col-sm-3">Cluny 2</td>
-                            <td scope="col" class="col-sm-3"><a href="https://www.ticketweb.uk/event/john-cluny-2-tickets/13256763?REFERRAL_ID=tmfeed&irgwc=1&utm_source=219208-Bandsintown&utm_medium=affiliate&utm_campaign=219208&clickId=SSRwlYTNIxyPUTXQyJQWHwKVUkHzpyRFiRLnXg0" target="_blank">Link</a></td>
-                            </tr>
-                            </tbody>
+                        <table class="table table-responsive john-table" style="display: none;"><br>
+                            <span class="text-center no-dates" style="display: none;">No tour dates.</span>
                         </table>
                     </div>
 
