adding tour dates

--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -409,12 +409,18 @@
                                     <td scope="col" class="col-sm-3">123 Pleasant Street</td>
                                     <td scope="col" class="col-sm-3"><a href="https://www.showclix.com/event/jrobbins123" target="_blank">Link</a></td>
                                 </tr>
-                                <tr>
                                     <td scope="col" class="col-sm-3">May 25, 2024</td>
                                     <td scope="col" class="col-sm-3">Westminster, MD</td>
                                     <td scope="col" class="col-sm-3">The Carroll Arts Center</td>
                                     <td scope="col" class="col-sm-3"><a href="https://carrollartscenter.my.salesforce-sites.com/ticket/#/instances/a0F6T00000vpI4OUAU" target="_blank">Link</a></td>
                                 </tr>     
+                                <tr>
+                                    <td scope="col" class="col-sm-3">May 26, 2024</td>
+                                    <td scope="col" class="col-sm-3">Minneapolis, MN</td>
+                                    <td scope="col" class="col-sm-3">Caterwaul Festival</td>
+                                    <td scope="col" class="col-sm-3"><a href="https://ticketstripe.com/2024caterwaul" target="_blank">Link</a></td>
+                                    </tr>
+                                <tr>
                             </tbody>
                         </table>
                     </div>
