--- a/public/tour.css
+++ b/public/tour.css
@@ -82,6 +82,10 @@ td > a:hover {
     margin-top: 0;
 }
 
+.water-table {
+    margin-top: 0;
+}
+
 @media screen and (min-width: 0px) and (max-width: 1024px)  { 
     h1 {
         display: none;
@@ -124,6 +128,10 @@ td > a:hover {
     }
 
     .pulp-table {
+        margin-top: 0;
+    }
+
+    .water-table {
         margin-top: 0;
     }
 }
