--- a/public/tour.css
+++ b/public/tour.css
@@ -86,6 +86,14 @@ td > a:hover {
     margin-top: 0;
 }
 
+.sea-table {
+    margin-top: 0;
+}
+
+.no-dates-robbins {
+    display: none;
+}
+
 @media screen and (min-width: 0px) and (max-width: 1024px)  { 
     h1 {
         display: none;
@@ -132,6 +140,10 @@ td > a:hover {
     }
 
     .water-table {
+        margin-top: 0;
+    }
+
+    .sea-table {
         margin-top: 0;
     }
 }
